--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
     </section>
     <!---Footer-->
-    <footer id=""contacto>
+    <footer id="contacto">
         <div class="footer-content">
             <div class="footer-section">
                 <h3>Contactanos</h3>
